# python-project-template

./: .pre-commit-config.yaml  README.md  makefile  pyproject.toml  requirements.txt
src/project_name/: example.py
src/scripts/: test.py
tests/: conftest.py  test_example.py
